Bug 43084 - [SNA G45/G43] xserver crash running GIMP
Summary: [SNA G45/G43] xserver crash running GIMP
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: 7.7 (2012.06)
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-19 01:53 UTC by Fryderyk Dziarmagowski
Modified: 2011-11-19 08:14 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Fryderyk Dziarmagowski 2011-11-19 01:53:19 UTC
Using SNA with intel driver 2.17.0, xserver 1.11.2 and GIMP:

choose Filters -> Render -> Gfig and try draw an arc:

[  4297.240] 0: /usr/bin/X (xorg_backtrace+0x3b) [0x81a9717]
[  4297.240] 1: /usr/bin/X (0x8047000+0x1660da) [0x81ad0da]
[  4297.240] 2: (vdso) (__kernel_rt_sigreturn+0x0) [0xffffe40c]
[  4297.240] 3: /usr/bin/X (miPolyArc+0x1426) [0x81858e6]
[  4297.240] 4: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb7748000+0x3ade6) [0xb7782de6]
[  4297.240] 5: /usr/bin/X (0x8047000+0xf0b8a) [0x8137b8a]
[  4297.240] 6: /usr/bin/X (0x8047000+0x2ba0a) [0x8072a0a]
[  4297.240] 7: /usr/bin/X (0x8047000+0x2f178) [0x8076178]
[  4297.240] 8: /usr/bin/X (0x8047000+0x1e4a5) [0x80654a5]
[  4297.240] 9: /lib/libc.so.6 (__libc_start_main+0xe6) [0x48581c72]
[  4297.240] 10: /usr/bin/X (0x8047000+0x1e091) [0x8065091]
[  4297.240] Segmentation fault at address (nil)

After digging a bit I found it can be triggered with x11perf as well:
x11perf -wdcircle100 -time 1 -repeat 1 -rop GXxor
(related to #25078, but with EXA)
Comment 1 Chris Wilson 2011-11-19 08:14:38 UTC
commit 297f7680cfd73ab6eb099adca7aefe00e61c9e85
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Nov 19 16:11:42 2011 +0000

    sna: Avoid the NULL damage deref
    
    Fixes x11perf -wdcircle100 -time 1 -repeat 1 -rop GXxor
    
    Reported-by: Fryderyk Dziarmagowski <fdziarmagowski@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=43084
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.