sna: Avoid the NULL damage deref

Fixes x11perf -wdcircle100 -time 1 -repeat 1 -rop GXxor

Reported-by: Fryderyk Dziarmagowski <fdziarmagowski@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=43084
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>